# pzzld-api

./: .gitignore  Cargo.toml  Dockerfile  Puzzled.toml  README.md  flake.nix
.config/: default.config.toml
.docker/: Dockerfile
.github/: dependabot.yml
.github/workflows/: binary.yml  clippy.yml  docker.yml  rust.yml
src/: main.rs
src/app/: api.rs  application.rs  mod.rs
src/config/: context.rs  mod.rs  settings.rs
src/config/kinds/: server.rs
src/routes/: base.rs  mod.rs
