[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Pzzld is a sandbox Rust project for learning and experimenting with Rust."
edition = "2021"
homepage = "https://github.com/FL03/pzzld/wikis"
keywords = []
license = "Apache-2.0"
name = "pzzld-api"
repository = "https://github.com/FL03/pzzld.git"
readme = "README.md"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
config = "0.14"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
http = "1"
lazy_static = "1"
paste = "1"
pin-project-lite = "0.2"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.26" }
smart-default = "0.7"

[dependencies.axum]
features = ["macros"]
version = "0.7"

[dependencies.hyper]
features = ["full"]
version = "1"

[dependencies.hyper-util]
features = ["full"]
version = "0.1"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.tower]
features = []
version = "0.4"

[dependencies.tower-http]
features = [
    "fs",
    "trace"
]
version = "0.5"

[dependencies.tower-service]
features = []
version = "0.3"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"


