[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "pzzld"
description = "The pzzld-api provides a RESTful API for the pzzld project."
edition = "2021"
homepage = "https://github.com/FL03/pzzld-api/wikis"
keywords = []
license = "Apache-2.0"
name = "pzzld-api"
repository = "https://github.com/FL03/pzzld-api.git"
readme = "README.md"
version = "0.1.0"

[[bin]]
bench = false
doctest = false
name = "pzzld"
path = "src/main.rs"

[build-dependencies]

[dependencies]
anyhow = "1"
config = "0.14"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
http = "1"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.26" }
smart-default = "0.7"
tower = "0.4"
tower-service = "0.3"

[dependencies.axum]
features = ["macros"]
version = "0.7"

[dependencies.hyper]
features = ["full"]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.tower-http]
features = [
    "fs",
    "trace"
]
version = "0.5"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[dev-dependencies]

